Adições
Atualiza versão do spring boot;
Adiciona springdocs ao projeto;
Altera endpoint para autenticação;
Remove arquivos desnecessários;