@@ -5,10 +5,11 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
- * The type Cors configuration.
+ * CorsConfiguration is a configuration class that defines the CORS (Cross-Origin Resource Sharing) configuration
+ * for the application. It allows configuring the allowed methods for CORS requests.
  *
  * @author Edson Isaac
  */
@@ -16,15 +17,15 @@ import java.util.Arrays;
 public class CorsConfiguration {
 
     /**
-     * Cors configuration source cors configuration source.
+     * Creates and configures the CORS configuration source.
      *
-     * @return cors configuration source
+     * @return the CORS configuration source
      */
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        var source = new UrlBasedCorsConfigurationSource();
-        var corsConfiguration = new org.springframework.web.cors.CorsConfiguration().applyPermitDefaultValues();
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+    CorsConfigurationSource corsConfigurationSource() {
+        final var source = new UrlBasedCorsConfigurationSource();
+        final var corsConfiguration = new org.springframework.web.cors.CorsConfiguration().applyPermitDefaultValues();
+        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
